@@ -5,9 +5,13 @@ import org.irfan.library.dao.BookTypeRepository;
 import org.irfan.library.dto.BookTypeDTO;
 import org.irfan.library.exception.DuplicateDataException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -28,11 +32,18 @@ public class BookTypeService {
     }
 
     @Transactional(readOnly = true)
-    public List<BookTypeDTO> getAllBookTypes(){
-        return bookTypeRepository.findAll()
-                .stream()
-                .map(bookType -> new BookTypeDTO(bookType.getName()))
-                .collect(Collectors.toList());
+    public List<BookTypeDTO> getAllBookTypes(int page, int size){
+        Pageable paging = PageRequest.of(page, size);
+        Page<Type> pagedResult = bookTypeRepository.findAll(paging); // Use paging here
+
+        if (pagedResult.hasContent()) {
+            return pagedResult.getContent()
+                    .stream()
+                    .map(bookType -> new BookTypeDTO(bookType.getName()))
+                    .toList();
+        } else {
+            return new ArrayList<BookTypeDTO>();
+        }
     }
 
     @Transactional
